--- a/package.json
+++ b/package.json
@@ -9,24 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^1.2.1",
+    "next": "13.4.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1"
+  },
+  "devDependencies": {
     "@next/eslint-plugin-next": "^13.2.1",
-    "@next/font": "13.2.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
-    "clsx": "^1.2.1",
+    "autoprefixer": "^10.4.14",
     "eslint": "8.32.0",
     "eslint-config-next": "13.2.1",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "formidable-oss-badges": "^1.1.0",
-    "next": "13.4.4",
+    "postcss": "^8.4.24",
     "prettier": "^2.8.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.7.1",
+    "tailwindcss": "^3.3.2",
     "typescript": "4.9.4"
   }
 }
