--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "eslint": "8.32.0",
     "eslint-config-next": "13.2.1",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "formidable-oss-badges": "^1.1.0",
     "postcss": "^8.4.24",
