--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^4.0.0",
+    "@fontsource-variable/urbanist": "^5.0.8",
+    "@fontsource/pragati-narrow": "^5.0.7",
     "astro": "^2.10.1",
     "astro-icon": "^0.8.1",
     "react-icons": "^4.10.1",
