--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "astro": "^3.5.5",
     "astro-icon": "^0.8.1",
     "react-icons": "^4.10.1",
+    "sharp": "^0.32.6",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
